feat: improve code, extend test generation and knowledge base updating logic